--- a/bio/bio.html
+++ b/bio/bio.html
@@ -6,18 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio/Contato</title>
     <link rel="stylesheet" href="../assets/css/style.css">
-
+        <!--scroll animation-->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header data-aos="fade-down">
         <a href="../index.html" class="return"><i class="fa-solid fa-arrow-left"></i>Página Inícial</a>
+        <nav class="list-links">
+            <img src="../vetor/icons/moon.png" alt="moon mode" id="dark-mode">
+        </nav>
     </header>
-    <section id="bio">
-        <div class="container">
-            <div class="content">
+    <section id="bio" data-aos="fade-down">
+        <div class="container" data-aos="fade-up">
+            <div class="content" data-aos="fade-up-right">
                 <img src="../vetor/imagens/user/profile.jpg" alt="">
             </div>
-            <div class="content">
+            <div class="content" data-aos="fade-up-left">
                 <h1 class="big-heading">LEOSANDRO FOTOGRAFIA</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur necessitatibus repellat perspiciatis in iste vitae possimus cum ex minima rerum, qui voluptatibus! Porro ex vel facere fuga minima soluta saepe?
@@ -27,23 +31,23 @@
         </div>
     </section>
 
-    <section id="contato">
-        <h1 class="big-heading">Contato</h1>
+    <section id="contato" data-aos="fade-down">
+        <h1 class="big-heading" data-aos="fade-down">Contato</h1>
         <div class="container">
             <ul class="social-media">
-                <li>
+                <li data-aos="fade-right">
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </li>
-                <li>
+                <li data-aos="fade-up">
                     <a href="#"><i class="fab fa-facebook-f"></i></ion-icon></a>
                 </li>
-                <li>
+                <li data-aos="fade-down">
                     <a href="#"><i class="fab fa-whatsapp"></i></a>
                 </li>
-                <li>
+                <li data-aos="fade-up">
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </li>
-                <li>
+                <li data-aos="fade-left">
                     <a href="mailto:leosandrofotografo@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                 </li>
             </ul>
@@ -58,9 +62,32 @@
     <!-- ion-icon-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <!--animate icon-->
-    <script src="https://cdn.lordicon.com/xdjxvujz.js"></script>
-     <!-- fontawesome-->
+    <!-- fontawesome-->
     <script src="https://kit.fontawesome.com/90bb1626b3.js" crossorigin="anonymous"></script>
+    <!--Scrip animate scroll-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        var darkMode = document.getElementById('dark-mode');
+        var loader = document.getElementById('carregando');
+        var albumPhoto = document.querySelectorAll('.album-photo');
+        
+        window.addEventListener('load', function(){
+            loader.style.display = "none";
+            document.body.style.overflow = "unset";
+        })
+        darkMode.onclick = function(){
+            document.body.classList.toggle("dark-mode");
+            if(document.body.classList.contains('dark-mode')){
+                darkMode.src = "../vetor/icons/sun.png";
+            }else{
+                darkMode.src = "../vetor/icons/moon.png"
+            }
+        }
+    </script>
+    <script>
+        AOS.init({
+            duration: 1000,
+        });
+    </script>
 </body>
 </html>
