--- a/bio/bio.html
+++ b/bio/bio.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio/Contato</title>
     <link rel="stylesheet" href="../assets/css/style.css">
-        <!--scroll animation-->
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--scroll animation-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header data-aos="fade-down">
@@ -16,38 +16,39 @@
             <img src="../vetor/icons/moon.png" alt="moon mode" id="dark-mode">
         </nav>
     </header>
-    <section id="bio" data-aos="fade-down">
-        <div class="container" data-aos="fade-up">
-            <div class="content" data-aos="fade-up-right">
-                <img src="../vetor/imagens/user/profile.jpg" alt="">
+    <section id="about">
+        <div class="container">
+            <div class="conteudo">
+                <img src="../vetor/imagens/user/profile.jpg" alt="user">
             </div>
-            <div class="content" data-aos="fade-up-left">
-                <h1 class="big-heading">LEOSANDRO FOTOGRAFIA</h1>
+            <div class="conteudo">
+                <h1 class="big-heading">Nome da Empresa</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur necessitatibus repellat perspiciatis in iste vitae possimus cum ex minima rerum, qui voluptatibus! Porro ex vel facere fuga minima soluta saepe?
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima aperiam nam nobis excepturi nemo! Omnis voluptatem quibusdam provident minus? Qui perspiciatis ratione quia incidunt illo minima officiis consectetur consequatur? Porro?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laudantium dolor recusandae! Vel eos odio, distinctio, ipsa iusto sunt, praesentium commodi explicabo quasi illum consectetur. Mollitia reiciendis assumenda dolorum! Aperiam?
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod autem dignissimos eligendi unde iure doloremque neque illum expedita tenetur. Odit repellendus obcaecati non atque, impedit alias? Corporis sapiente natus repudiandae.
                 </p>
             </div>
         </div>
     </section>
-
-    <section id="contato" data-aos="fade-down">
-        <h1 class="big-heading" data-aos="fade-down">Contato</h1>
+    <section id="contato" data-aos="fade-up">
+        <h1 class="big-heading" data-aos="fade-up">Contato</h1>
         <div class="container">
             <ul class="social-media">
-                <li data-aos="fade-right">
+                <li data-aos="fade-up">
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li data-aos="fade-up">
                     <a href="#"><i class="fab fa-facebook-f"></i></ion-icon></a>
                 </li>
-                <li data-aos="fade-down">
+                <li data-aos="fade-up">
                     <a href="#"><i class="fab fa-whatsapp"></i></a>
                 </li>
                 <li data-aos="fade-up">
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </li>
-                <li data-aos="fade-left">
+                <li data-aos="fade-up">
                     <a href="mailto:leosandrofotografo@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                 </li>
             </ul>
@@ -86,7 +87,7 @@
     </script>
     <script>
         AOS.init({
-            duration: 1000,
+            duration: 1600,
         });
     </script>
 </body>
