--- a/bio/bio.html
+++ b/bio/bio.html
@@ -56,7 +56,7 @@
     </section>
     <footer>
         <div class="rodape">
-            <span>© 2022 Leosandro Fotografia – All rights reserved.</span>
+            <span>© Tio Samuca – All rights reserved.</span>
             <a href="https://nicodesn.github.io/portfolio/" target="_blank">Powered By Nicode</a>
         </div>
     </footer>
