--- a/bio/bio.html
+++ b/bio/bio.html
@@ -22,12 +22,12 @@
                 <img src="../vetor/imagens/user/profile.jpg" alt="user">
             </div>
             <div class="conteudo">
-                <h1 class="big-heading">Nome da Empresa</h1>
+                <h1 class="big-heading">Lukarte</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias laudantium dolor recusandae! Vel eos odio, distinctio, ipsa iusto sunt, praesentium commodi explicabo quasi illum consectetur. Mollitia reiciendis assumenda dolorum! Aperiam?
+                    LukArte é uma agência de comunicação e marketing focada em  melhorar o funcionamento de empresas, marcas e pessoas de modo a atingir a notoriedade que realmente merece. Para o efeito, agrega uma equipa de profissionais formados em: Jornalismo, Comunicação Institucional, Relações Públicas, Marketing, Fotógrafos, e Vídeo Maker, com objectivo de proporcionar visiblidade em diversas instituições.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod autem dignissimos eligendi unde iure doloremque neque illum expedita tenetur. Odit repellendus obcaecati non atque, impedit alias? Corporis sapiente natus repudiandae.
+                    A produção de estratégias integradas é o nosso foco com intuito de ajudar qualquer organização a tornar a sua missão relevante para quem a vê. O nosso trabalho não conhece fronteiras, por isso, comunicamos para todo o mundo. Se quer comunicar o seu negócio ou divulgar a sua imagem em Angola ou noutro país, conte-nos o seu desafio! Vamos desenvolver uma estratégia de comunicação integrada personalizada, que vai permitir que o seu negócio alcance a visibilidade que merece. O seu objectivo é o nosso foco.
                 </p>
             </div>
         </div>
@@ -37,7 +37,7 @@
         <div class="container">
             <ul class="social-media">
                 <li data-aos="fade-up">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/lukarte.ao/?hl=pt" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li data-aos="fade-up">
                     <a href="#"><i class="fab fa-facebook-f"></i></ion-icon></a>
@@ -56,7 +56,7 @@
     </section>
     <footer>
         <div class="rodape">
-            <span>© Tio Samuca – All rights reserved.</span>
+            <span>© Lukarte – All rights reserved.</span>
             <a href="https://nicodesn.github.io/portfolio/" target="_blank">Powered By Nicode</a>
         </div>
     </footer>
